--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ org.gradle.jvmargs=-Xmx1G
 	loader_version=0.16.10
 
 # Mod Properties
-	mod_version = 1.0-SNAPSHOT
+	mod_version = 1.0
 	maven_group = de.meowlan
 	archives_base_name = 2chat
 
